--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <script type="text/javascript" async src="//cdn.evgnet.com/beacon/partneracceleration/furnico_test_dev/scripts/evergage.min.js"></script>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <script type="text/javascript" async
+    src="//cdn.evgnet.com/beacon/partneracceleration/furnico_test_dev/scripts/evergage.min.js"></script>
+  <script runat=server>
+    Platform.Load("core", "1");
+    HTTPHeader.SetValue("Access-Control-Allow-Methods", "POST");
+    HTTPHeader.SetValue("Access-Control-Allow-Origin", "*");
+  </script>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>vite-project</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
