--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <script type="text/javascript" async
     src="//cdn.evgnet.com/beacon/partneracceleration/furnico_test_dev/scripts/evergage.min.js"></script>
-  <script runat=server>
-    Platform.Load("core", "1");
-    HTTPHeader.SetValue("Access-Control-Allow-Methods", "POST");
+  <script runat="server">
+    Platform.Load("Core", "1.1.5");
+    HTTPHeader.SetValue("Access-Control-Allow-Methods", "POST, OPTIONS");
     HTTPHeader.SetValue("Access-Control-Allow-Origin", "*");
+    HTTPHeader.SetValue("Access-Control-Allow-Credentials", "true");
+    HTTPHeader.SetValue("Access-Control-Allow-Headers", "Content-Type"); 
   </script>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
