--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-  <script type="text/javascript" async
-    src="//cdn.evgnet.com/beacon/partneracceleration/furnico_test_dev/scripts/evergage.min.js"></script>
+  <!-- <script type="text/javascript" async
+    src="//cdn.evgnet.com/beacon/partneracceleration/furnico_test_dev/scripts/evergage.min.js"></script> -->
+    <script type="text/javascript" async src="//cdn.evgnet.com/beacon/partneracceleration/shoes2023/scripts/evergage.min.js"></script>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
